--- a/index.html
+++ b/index.html
@@ -50,25 +50,28 @@
         <ul class="navbar-nav ms-auto" style="padding-right:20px;">
           <!-- ms-auto will shift the contents to the right similar to ml-auto -->
           <li class="nav-item">
-            <a class="nav-link nb" href="#footer">Contact Us</a>
+            <a class="nav-link nb" href="#us">Memories</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link nb" href="#aboutus">About Us</a>
+            <a class="nav-link nb" href="contact_us2.html">Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link nb" href="#pricing">Packages</a>
+            <a class="nav-link nb" href="aboutus.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nb" href="Europe.html">Europe</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nb" href="South-Asia.html">South Asia</a>
           </li>
         </ul>
       </div>
     </nav>
 
-    <div class="row header">
-      <!-- <video width="1000"
-             height="350"
-             controls
-             preload="auto">
-          <source src="images/coastline.mp4"
-             type="video/mp4">-->
+    <div class="row header" id="head">
+      <img src="images/headerimg.jpg" alt="no img" class="head-img">
+      <!-- <h1 class="head-text">The most beautiful thing in the world is, of course, the world itself
+      <br>~ Wallace Stevens</h1> -->
     </div>
 
   </section>
@@ -139,6 +142,61 @@
     </div>
   </section>
 
+<!-- US -->
+  <section id="us" class="us">
+    <div class="container-fluid">
+      <center>
+        <h2 class="section-heading">Down the Memory Lane</h2>
+        <p class="p-text">Some momemts worth remembering</p>
+      </center>
+      <div class="row">
+        <div class="col-lg-8 col-md-8 col-sm-12 us-box">
+          <center>
+            <img src="images/hotel2.jpg" alt="no img" style="height:280px; width:800px">
+          </center>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 us-box">
+          <center>
+            <img src="images/hotel.jpg" alt="no img" style="height:280px;">
+          </center>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-12 us-box">
+          <center>
+            <img src="images/adv.jpg" alt="no img" style="height:280px;">
+          </center>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 us-box">
+          <center>
+            <img src="images/adv2.jpg" alt="no img" style="height:280px;">
+          </center>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 us-box">
+          <center>
+            <img src="images/adv3.jpg" alt="no img" style="height:280px;">
+          </center>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-12 us-box">
+          <center>
+            <img src="images/pool2.jpg" alt="no img" style="height:280px; width:400px">
+          </center>
+        </div>
+        <div class="col-lg-8 col-md-8 col-sm-12 us-box">
+          <center>
+            <img src="images/pool.jpg" alt="no img" style="height:280px; width:800px">
+          </center>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+<!-- footer -->
   <footer class="text-gray-600 body-font ft">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-wrap md:text-left text-center order-first">
@@ -146,50 +204,50 @@
             <h2 class="title-font font-medium text-white-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
             <nav class="list-none mb-10">
               <li>
-                <a class="text-gray-600 hover:text-gray-800">First Link</a>
+                <a class="text-gray-600 hover:text-white-1000">Adventure Tours</a>
               </li>
               <li>
-                <a class="text-gray-600 hover:text-gray-800">Second Link</a>
+                <a class="text-gray-600 hover:text-white-1000">Into the wild</a>
               </li>
               <li>
-                <a class="text-gray-600 hover:text-gray-800">Third Link</a>
+                <a class="text-gray-600 hover:text-white-1000">Romantic getaways</a>
               </li>
               <li>
-                <a class="text-gray-600 hover:text-gray-800">Fourth Link</a>
-              </li>
-            </nav>
-          </div>
-          <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-            <h2 class="title-font font-medium text-white-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
-            <nav class="list-none mb-10">
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">First Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Second Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Third Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Fourth Link</a>
+                <a class="text-gray-600 hover:text-white-1000">Group Tours</a>
               </li>
             </nav>
           </div>
           <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-            <h2 class="title-font font-medium text-white-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
+            <h2 class="title-font font-medium text-white-900 tracking-widest text-sm mb-3">ADVENTURE TOURS</h2>
             <nav class="list-none mb-10">
               <li>
-                <a class="text-gray-600 hover:text-gray-800">First Link</a>
+                <a class="text-gray-600 hover:text-white-1000">Water adventures</a>
               </li>
               <li>
-                <a class="text-gray-600 hover:text-gray-800">Second Link</a>
+                <a class="text-gray-600 hover:text-white-1000">Forest adventures</a>
               </li>
               <li>
-                <a class="text-gray-600 hover:text-gray-800">Third Link</a>
+                <a class="text-gray-600 hover:text-white-1000">Camping</a>
               </li>
               <li>
-                <a class="text-gray-600 hover:text-gray-800">Fourth Link</a>
+                <a class="text-gray-600 hover:text-white-1000">Trekking</a>
+              </li>
+            </nav>
+          </div>
+          <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+            <h2 class="title-font font-medium text-white-900 tracking-widest text-sm mb-3">TOP DESTINATIONS</h2>
+            <nav class="list-none mb-10">
+              <li>
+                <a class="text-gray-600 hover:text-white-1000">London</a>
+              </li>
+              <li>
+                <a class="text-gray-600 hover:text-white-1000">Europe</a>
+              </li>
+              <li>
+                <a class="text-gray-600 hover:text-white-1000">South Asia</a>
+              </li>
+              <li>
+                <a class="text-gray-600 hover:text-white-1000">Italy</a>
               </li>
             </nav>
           </div>
@@ -197,15 +255,28 @@
             <h2 class="title-font font-medium text-white-900 tracking-widest text-sm mb-3">SUBSCRIBE</h2>
             <div class="flex xl:flex-nowrap md:flex-nowrap lg:flex-wrap flex-wrap justify-center items-end md:justify-start">
               <div class="relative w-40 sm:w-auto xl:mr-4 lg:mr-0 sm:mr-4 mr-2">
-                <label for="footer-field" class="leading-7 text-sm text-gray-600">Placeholder</label>
+                <label for="footer-field" class="leading-7 text-sm text-gray-600">Get our newest offers at your fingertips</label>
                 <input type="text" id="footer-field" name="footer-field" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:bg-transparent focus:ring-2 focus:ring-yellow-200 focus:border-yellow-500 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
               </div>
-              <center><button class="lg:mt-2 xl:mt-0 flex-shrink-0 inline-flex text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded" style="margin:10px; margin-left: 65px;">Button</button></center>
+              <center><button class="lg:mt-2 xl:mt-0 flex-shrink-0 inline-flex text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded" style="margin:10px; margin-left: 65px;">Sign Up</button></center>
             </div>
           </div>
         </div>
       </div>
     </footer>
+
+
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <script type="text/javascript">
+        window.onload = function () {
+            var images = ['images/img1.jpg', 'images/img2.jpg', 'images/imag3.jpg', 'images/img4.jpg', 'images/img5.jpg'];
+            var image = images[Math.floor(Math.random() * images.length)];
+            document.getElementsById('head')[0].style.backgroundImage = "url('" + image + "')";
+            document.getElementsById('head')[0].style.backgroundRepeat = "no-repeat";
+            // document.getElementsById('head')[0].style.backgroundSize = "cover";
+            document.getElementsById('head')[0].style.height = "500px";
+        }
+    </script>
   </body>
 </html>
