--- a/index.html
+++ b/index.html
@@ -68,10 +68,18 @@
       </div>
     </nav>
 
-    <div class="row header" id="head">
-      <img src="images/headerimg.jpg" alt="no img" class="head-img">
-      <!-- <h1 class="head-text">The most beautiful thing in the world is, of course, the world itself
-      <br>~ Wallace Stevens</h1> -->
+
+    <div class="row header">
+      <!-- text -->
+      <div class="col-lg-6 col-md-12">
+        <h1 class="heading">The most beautiful thing in the world is, of course, the world itself
+        <br>~ Wallace Stevens</h1>
+      </div>
+
+      <!-- image -->
+      <div class="col-lg-6 col-md-12 col-md-12">
+        <img class="head-img" src="images/head.jpg" alt="head Image">
+      </div>
     </div>
 
   </section>
