--- a/aboutus.html
+++ b/aboutus.html
@@ -56,7 +56,7 @@
             <a class="nav-link nb" href="contact_us2.html">Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link nb active" aria-current="page" href="aboutus.html">About Us</a>
+            <a class="nav-link nb active current-page" aria-current="page" href="aboutus.html">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link nb" href="Europe.html">Europe</a>
