--- a/contact_us2.html
+++ b/contact_us2.html
@@ -8,10 +8,10 @@
 
     <!-- bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    
+
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 
     <!-- Fontawesome CDN -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -32,11 +32,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-    
+
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
-        <img class="logo" src="Gallery/LOGO.png" alt="logo" class = "rounded"><a href="index.html" class="navbar-brand">SeatSeek</a>
+        <img class="logo" src="images/logo.png" alt="logo" class = "rounded"><a href="index.html" class="navbar-brand">SeatSeek</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
@@ -44,13 +44,16 @@
           <ul class="navbar-nav ms-auto" style="padding-right:20px;">
             <!-- ms-auto will shift the contents to the right similar to ml-auto -->
             <li class="nav-item">
-              <a class="nav-link nb active current-page" aria-current="page" href="#footer">Contact Us</a>
+              <a class="nav-link nb active current-page" aria-current="page" href="contact_us2.html">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nb" href="#aboutus">About Us</a>
+              <a class="nav-link nb" href="aboutus.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nb" href="#pricing">Packages</a>
+              <a class="nav-link nb" href="Europe.html">Europe</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link nb" href="South-Asia.html">South Asia</a>
             </li>
           </ul>
         </div>
@@ -72,8 +75,8 @@
               <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
               <textarea id="message" name="message" class="w-full bg-white rounded border border-gray-300 focus:border-yellow-500 focus:ring-2 focus:ring-yellow-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
             </div>
-            <button class="text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded text-lg">Button</button>
-            <p class="text-xs text-gray-500 mt-3">Chicharrones blog helvetica normcore iceland tousled brook viral artisan.</p>
+            <button class="text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded text-lg">Submit</button>
+            <p class="text-xs text-gray-500 mt-3">Connect with us</p>
           </div>
         </div>
       </section>
